# Electra_Wazard

./: CMakeLists.txt  README.md  astar.cpp  astar.h  astarfan.cpp  astarfan.h  bfs.h  convaswidgets.h  custom_queue.h  grid.cpp  grid.h  gridwidget.cpp  gridwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
